fix : API form, css style
- api 요청, 응답 시 형식 문제 해결
- padding으로 인한 style 수정
- chart.js를 활용한 데이터 시각화

--- a/power-pred-front/src/pages/retrieve/admin/RetrieveAdmin.css
+++ b/power-pred-front/src/pages/retrieve/admin/RetrieveAdmin.css
@@ -202,11 +202,12 @@
     border: 1px solid;
     border-color: #d2d3e2;
     border-radius: 30px;
-    height: 359px;
+    height: 319px;
     left: 1026px;
     position: absolute;
     top: 387px;
-    width: 585px;
+    width: 545px;
+    padding : 20px;
   }
   
   .retrieve-admin .download-file-table {
@@ -214,11 +215,12 @@
     border: 1px solid;
     border-color: #d2d3e2;
     border-radius: 30px;
-    height: 359px;
+    height: 319px;
     left: 383px;
     position: absolute;
     top: 387px;
-    width: 585px;
+    width: 545px;
+    padding:  20px;
   }
   
   .retrieve-admin .download-button {
