--- a/power-pred-front/src/pages/retrieve/user/RetrieveUser.css
+++ b/power-pred-front/src/pages/retrieve/user/RetrieveUser.css
@@ -210,8 +210,14 @@
     left: 0;
     position: absolute;
     top: 80px;
-    width: 1153px;
+    width: 1113px;
+    padding: 20px;
   }
+
+  .retrieve-user .pred-graph-box .line-graph {
+    width: 100%;
+    height: 100%;
+}
 
   .retrieve-user .pred-graph-bname-box {
     background-color: #ffffff;
